# ProgZufallszahl

./: ProgZufallszahl.pyproj  ProgZufallszahl.sln
NewFolder1/: Modul1.py  montecarlo.ipynb
NewFolder1/ValuesTable/: README.md  pyproject.toml  setup.py
NewFolder1/ValuesTable/tablevalues/: __init__.py  main.py
NewFolder1/ValuesTable/tests/: __init__.py  test_main.py
